# Gym-Rag

./: .gitignore  README.md  plan.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/rag/: generate.py  ingest.py  retriever.py  vectorstore.py
backend/scripts/: ingest_papers.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  MessageList.tsx  Sidebar.tsx  Sources.tsx
frontend/src/hooks/: useChat.ts
