[project]
name = "gym-rag-backend"
version = "0.1.0"
description = "RAG-based gym chatbot backend — retrieves from research papers, reranks with Cohere, answers with Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-cohere>=0.3",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5",
    "cohere>=5.11",
    "pypdf>=5.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
